views of add-instrument, add-message done + Jammins session changed view

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,6 +51,14 @@
     margin: 10px auto;
 }
 
+.instrument-card2 {
+    height: 200px;
+    border-radius: 20%;
+    margin: 10px auto;
+
+}
+
+
 
 .jam-card-wrapper {
   height: 500px;
