fix the dashbord view

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,10 +1,11 @@
 <div class="tab">
-  <button class="tablinks" onclick="document.openJamtab(event, 'Instruments')" id="defaultOpen">My skills</button>
-  <button class="tablinks" onclick="document.openJamtab(event, 'Sessions')">My Jams</button>
+  <button class="tablinks" onclick="document.openJamtab(event, 'My skills')" id="defaultOpen">My skills</button>
+  <button class="tablinks" onclick="document.openJamtab(event, 'Hosting')">Hosting</button>
+  <button class="tablinks" onclick="document.openJamtab(event, 'Pending')">Pending</button>
 <!--   <button class="tablinks" onclick="document.openJamtab(event, 'Profile')">Profile</button> -->
 </div>
 
-<div id="Instruments" class="tabcontent">
+<div id="My skills" class="tabcontent">
   <div class="container-fluid">
     <div class="row">
       <h3 class="h3-tab-content-title">My skills</h3>
@@ -21,28 +22,33 @@
   </div>
     </div>
 
+     <div id="Hosting" class="tabcontent">
+         <div class="container-fluid">
+            <div class="row">
+            <h3 class="h3-tab-content-title">Hosting</h3>
+            <p><%= link_to "Create a jam session", new_jamm_path %></p>
 
-<div id="Sessions" class="tabcontent">
-  <div class="container-fluid">
-    <div class="row">
-      <h3 class="h3-tab-content-title">My Jams</h3>
-      <p><%= link_to "Create a jam session", new_jamm_path %></p>
-        <% @jamms.each do |jamm| %>
+            <% @jamms.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
           </div>
           <% end %>
-          </div>
-          <div class="row">
-          <h3 class="h3-tab-content-title">My Participations</h3>
+
           <% @myparts.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
           </div>
-        <% end %>
-        </div>
-        <div class="row">
-        <h3 class="h3-tab-content-title">My Applications</h3>
+            <% end %>
+       </div>
+      </div>
+    </div>
+
+
+
+       <div id="Pending" class="tabcontent">
+        <div class="container-fluid">
+         <div class="row">
+        <h3 class="h3-tab-content-title">Pending</h3>
           <% @myapplications.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
