--- a/app/views/pages/_instruments_tab_card.html.erb
+++ b/app/views/pages/_instruments_tab_card.html.erb
@@ -1,4 +1,3 @@
-
 <%= cl_image_tag skill.instrument.icon_url, class: "instrument-card1" %>
 
 <div class="card-header">
@@ -7,8 +6,10 @@
 <ul class="list-group list-group-flush">
   <li class="list-group-item"><%= skill.instrument.name %></li>
   <li class="list-group-item"><%= skill.level %></li>
-  <li class="list-group-item"><%= link_to "Edit", edit_skill_path(skill), class: "btn btn-primary" %>
-  <%= link_to skill_path(skill), method: :delete, data: { confirm: "Are your sure you want to delete this instrument #{skill.level}"} do %>
-  <p><i class= "far fa-trash-alt"></i> Cancel Instrument</p>
-    <% end %></li>
+  <li class="list-group-item">
+    <%= link_to "Edit", edit_skill_path(skill), "data-toggle": "modal", "data-target": "#editSkillModal#{skill.id}", class: "btn btn-primary" %>
+    <%= link_to skill_path(skill), method: :delete, data: { confirm: "Are your sure you want to delete this instrument #{skill.level}"} do %>
+      <p><i class= "far fa-trash-alt"></i> Cancel Instrument</p>
+    <% end %>
+  </li>
 </ul>
