--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,7 @@
 <div class="tab">
   <button class="tablinks" onclick="document.openJamtab(event, 'My skills')" id="defaultOpen">My skills</button>
   <button class="tablinks" onclick="document.openJamtab(event, 'Hosting')">Hosting</button>
+  <button class="tablinks" onclick="document.openJamtab(event, 'Participations')">Participations</button>
   <button class="tablinks" onclick="document.openJamtab(event, 'Pending')">Pending</button>
 <!--   <button class="tablinks" onclick="document.openJamtab(event, 'Profile')">Profile</button> -->
 </div>
@@ -13,12 +14,12 @@
         <p style="color:red;">You have to add at least one skill before using SoulJam</p>
       <% end %>
 
-      <p><%= link_to "Add a skill", new_skill_path, "data-toggle": "modal",  "data-target": "#newSkillModal" %></p>
+      <button class="btn btn-success" data-toggle="modal" data-target="#newSkillModal">Add a Skill</button>
+      <%= render "skills/new_skill_modal" %>
 
       <% @skills.each do |skill| %>
         <div class="col-xs-12 col-sm-4">
           <%= render "pages/instruments_tab_card", skill: skill %>
-          <%= render "skills/new_skill_modal" %>
           <%= render "skills/edit_skill_modal", skill: skill %>
         </div>
       <% end %>
@@ -37,7 +38,14 @@
             <%= render "pages/jamms_tab_card", jamm: jamm %>
           </div>
           <% end %>
+          </div>
+      </div>
+    </div>
 
+        <div id="Participations" class="tabcontent">
+        <div class="container-fluid">
+         <div class="row">
+          <h3 class="h3-tab-content-title">Participations</h3>
           <% @myparts.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
