--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,12 +13,13 @@
         <p style="color:red;">You have to add at least one skill before using SoulJam</p>
       <% end %>
 
-      <p><%= link_to "Add a skill", new_skill_path, "data-toggle": "modal",  "data-target": "#newSkillModal" %></p>
+      <p><%= link_to "Add a skill", new_jamm_path, "data-toggle": "modal",  "data-target": "#newSkillModal" %></p>
+      <%= render "skills/new_skill_modal" %>
 
       <% @skills.each do |skill| %>
+
         <div class="col-xs-12 col-sm-4">
           <%= render "pages/instruments_tab_card", skill: skill %>
-          <%= render "skills/new_skill_modal" %>
           <%= render "skills/edit_skill_modal", skill: skill %>
         </div>
       <% end %>
@@ -35,6 +36,9 @@
             <% @jamms.each do |jamm| %>
           <div class="col-xs-12 col-sm-4">
             <%= render "pages/jamms_tab_card", jamm: jamm %>
+            <%= render "jamms/new_jam_modal" %>
+
+
           </div>
           <% end %>
 
