Homepage Souljam font changed

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,7 +8,8 @@
   h1 {
     color: white;
     font-weight: bold;
-    font-size: 45px;
+    font-size: 60px;
+    font-family: 'Rock Salt', cursive;
   }
   p {
     color: #6BCDC1;
@@ -31,3 +32,10 @@
   background-image: image-url("background-new-jam.jpg");
   background-size: cover;
 }
+
+// font-family: 'Muli', sans-serif;
+// font-family: 'Quicksand', sans-serif;
+// font-family: 'Sirin Stencil', cursive;
+// font-family: 'Poiret One', cursive;
+// font-family: 'Monoton', cursive;
+// font-family: 'Rock Salt', cursive;
