--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta property="og:title" content="Without Souljam life would be a mistake">
+  <meta property="og:image" content="Souljam.jpg">
+  <meta property="og:description" content="SoulJam is the best way to connect quickly and safely with musicians.">
+  <meta property="og:site_name" content="Souljam"/>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>Soul Jam</title>
