colour change and participants statusicon move

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
     font-family: 'Rock Salt', cursive;
   }
   p {
-    color: #6BCDC1;
+    color: white;
     font-size: 30px;
     font-weight: lighter;
     margin-bottom: 30px;
@@ -20,8 +20,9 @@
   }
   .btn {
     padding: 15px 50px;
-    opacity: 0.9;
     border-radius: 40px;
+    background-color: white;
+    color: #100444;
   }
 }
 .banner2 {
