--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -16,7 +16,7 @@
     padding-right: 10px;
     font-size: 15px;
     margin-left: 25px;
-    color: #6BCDC1;
+    color: $blue;
   }
 }
 .h3-tab-content-title {
