--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -44,7 +44,7 @@
   margin-bottom: 40px;
 }
 .jams-new-h1 {
-  color: #6BCDC1;
+  color: $blue;
   text-align: center;
   text-shadow: 2px 2px #E5E5E5;
 }
