--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,7 +17,7 @@
   position: absolute;
   width: 100%;
   .navbar-wagon-link {
-    color: #6BCDC1;
+    color: white;
     font-weight: bold;
   }
 }
