--- a/app/assets/stylesheets/components/_jam_hover_option.scss
+++ b/app/assets/stylesheets/components/_jam_hover_option.scss
@@ -22,7 +22,7 @@ html {
   font-smooth: auto;
   font-weight: 300;
   line-height: 1.5;
-  color: #444;
+  color: white;
 }
 
 // body {
@@ -42,7 +42,7 @@ html {
   justify-content: center;
   width: 200px;
   height: 60px;
-  background-color: $pri;
+  background-color: #100444;
   border-radius: 99px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -64,16 +64,16 @@ html {
     content: '';
     left: 0;
     justify-content: flex-end;
-    background-color: $pri;
+    background-color: #100444;
   }
   &:after {
     content: '';
     right: 0;
     justify-content: flex-start;
-    background-color: darken($pri,5%);
+    background-color: darken(#9c95bf,35%);
   }
   &:hover {
-    background-color: $accent;
+    background-color: #9c95bf;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     span {
       opacity: 0;
