--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,7 +1,7 @@
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #adc6c3;
+    background-color: #9c95bf;
 }
 
 .tab button {
@@ -13,13 +13,15 @@
     padding: 14px 16px;
     transition: 0.3s;
 }
-
+.tab button.tablinks {
+  color: white;
+}
 .tab button:hover {
     background-color: #ddd;
 }
 
 .tab button.active {
-    background-color: #6BCDC1;
+    background-color: $blue;
 }
 
 .tabcontent {
