--- a/app/views/jamms/_participation.html.erb
+++ b/app/views/jamms/_participation.html.erb
@@ -1,9 +1,12 @@
 <% user = participation.user %>
 
 <div>
-  <%= cl_image_tag user.avatar, height: 100, radius: 100, crop: :thumb, class: "participant", id: "participant-#{user.id}", "data-id": user.id %>
+  <div style= "position:relative; width: 100px; height: 100px;">
+  <%= cl_image_tag user.avatar, height: 100, width: 100, radius: 100, crop: :thumb, class: "participant", id: "participant-#{user.id}", "data-id": user.id %>
   <i class= "<%= participation.status == 'Accepted' ? 'fa fa-check' : 'fas fa-times' %>" ></i>
-  <p><%= cl_image_tag participation.instrument.icon_url, height: 50, width: 50 %> <%= participation.instrument.name %></p>
+  </div>
+  <!-- <p><%= cl_image_tag participation.instrument.icon_url, height: 50, width: 50 %> <%= participation.instrument.name %></p> -->
+  <br>
   <% if policy(participation).destroy? %>
     <%= link_to "Cancel my participation", jamm_participation_path(participation), method: :delete,
     data: { confirm: "Are you sure ?"} %>
@@ -18,7 +21,6 @@
       <p><%= user.username %></p>
       <p>Using: <%= participation.instrument.name %></p>
       <p>Status: <%= participation.status %></p>
-      <span aria-hidden="true"> <i class= "<%= participation.status == 'Accepted' ? 'fa fa-check' : 'fas fa-times' %>" ></i></span>
     </div>
   </div>
 </div>
@@ -26,23 +28,29 @@
 
 <style>
   .participant-tooltip { display: none; }
-  div.participant-tooltip-popper {background-color: #6BCDC1; border-radius: 5px; padding: 5px 5px; font-weight: bold; }
+  div.participant-tooltip-popper {background-color: $blue; border-radius: 5px; padding: 5px 5px; font-weight: bold; }
     i.fa-check {
      display: inline-block;
      border-radius: 40px;
      box-shadow: 0px 0px 2px #888;
      padding: 0.5em 0.6em;
-     margin-left: -5px;
+     margin-left: 50%;
      position: absolute;
+     color: #65CDC1;
    }
    i.fa-times {
      display: inline-block;
      border-radius: 40px;
      box-shadow: 0px 0px 2px #888;
      padding: 0.5em 0.6em;
-     margin-left: -5px;
+     top: 0;
+     right: 0;
+     margin: -10px -14px;
      position: absolute;
-    color: red;
+     color: red;
    }
-
+/*i.icon-placement {
+  position: absolute
+  margin-left: 20px;*/
+}
 </style>
