--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -18,7 +18,7 @@
         <% end %>
 
         <div class="card-header">
-           <h3><%= @jamm.title %></h3>
+           <h3 class="instrument-card-h3"><%= @jamm.title %></h3>
         </div>
 
         <ul class="list-group list-group-flush">
