--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -45,7 +45,8 @@
 }
 
 .instrument-card1 {
-    height: 300px;
+    height: 50%;
+    width: 100%;
     display: block;
     border-radius: 5%;
     margin: 10px auto;
