--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -59,6 +59,14 @@
     margin: 10px auto;
 
 }
+
+.instrument-card4 {
+    height: 200px;
+    border-radius: 5%;
+    margin: 10px auto;
+    display: block;
+  }
+
 .instrument-card-h3 {
   margin-top: 5px;
   margin-bottom: 5px;
