--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,7 +19,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: #100444;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
