--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -8,13 +8,20 @@
     font-weight: bold;
     margin-bottom: 30px;
     text-align: center;
-    color: black;
+    color: #100444;
   }
   label {
-    color: black;
+    color: #100444;
   }
   .margin-top {
     margin-top: 50px;
+  }
+  .margin-addedtop {
+    margin-top: 5% !important;
+  }
+  .margin-addedtopbottom {
+    margin-top: 5% !important;
+    margin-bottom: 5% !important;
   }
   .btn {
     width: 100%;
@@ -32,7 +39,7 @@
   border-radius: 15px;
   box-shadow: 3px 3px 4px rgba(56, 153, 174, 0.2);
   label {
-    color: black;
+    color: #100444;
   }
   .btn {
     width: 100%;
