--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,8 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: inset 0 1px 5px 5px rgba(0, 0, 0, 0.07), 0px 5px 5px 5px rgba(0, 0, 0, 0.03);
+  //box-shadow: inset 0 1px 5px 5px rgba(0, 0, 0, 0.07), 0px 5px 5px 5px rgba(0, 0, 0, 0.03);
   //box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #C4C4C4;
+  background: #fff;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -25,6 +25,7 @@
 /* Logo */
 .navbar-wagon-brand img {
   height: 50px;
+  color: $blue;
 }
 
 /* User Avatar */
