--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,10 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url("https://fonts.googleapis.com/css?family=Monoton|Muli|Poiret+One|Quicksand|Rock+Salt|Sirin+Stencil");
+@import url("https://fonts.googleapis.com/css?family=Combo|Flamenco|Offside|Oldenburg");
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$body-font: "Open Sans", "Offside", "sans-serif";
+$headers-font: "Open Sans", "Offside", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
