--- a/app/views/jamms/index.html.erb
+++ b/app/views/jamms/index.html.erb
@@ -5,7 +5,7 @@
     placeholder: "Find a jam in your city"
   %>
 <% end %>
-<h3 class="h3-tab-content-title">All Jams</h3>
+<h3 class="h3-tab-content-title margin-left5pc">All Jams</h3>
 <div class="container">
   <div class="row">
       <% @jamms.each do |jamm| %>
