--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
  <div class="navbar-wagon <%= yield(:navbar_class) %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png", height: 50 %>
+    <% if current_page?(root_path) %>
+      <%= image_tag "logo-white.png", height: 50 %>
+    <% else %>
+      <%= image_tag "logo.png", height: 50 %>
+    <% end %>
   <% end %>
 
   <!-- Right Navigation -->
