--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -62,9 +62,7 @@
 
 .instrument-card4 {
     height: 200px;
-    border-radius: 5%;
-    margin: 10px auto;
-    display: block;
+    width: 100%;
   }
 
 .instrument-card-h3 {
