--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,10 @@
 
 main {
   min-height: calc(100vh - 120px);
-    font-family: "offside"
 }
 body {
-  color: #777
+  color: #777;
+  // font-family: "offside";
 }
 
 .form-control {
