--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -9,6 +9,7 @@
     margin-bottom: 30px;
     text-align: center;
     color: #100444;
+    font-family: "offside";
   }
   label {
     color: #100444;
