--- a/app/views/jamms/show.html.erb
+++ b/app/views/jamms/show.html.erb
@@ -12,9 +12,9 @@
       <div class="col-xs-12 col-md-6">
         <h3 class="h3-tab-content-title">Jamming session</h3>
         <% if @jamm.photo? %>
-          <%= cl_image_tag @jamm.photo, class: "instrument-card2" %>
+          <div style="background: url(<%= cl_image_path @jamm.photo %>) no-repeat center center; background-size: cover;" class="instrument-card2"></div>
         <% else %>
-          <%= cl_image_tag src="https://source.unsplash.com/collection/572418/free-concert-stock-photos", class: "instrument-card2" %>
+          <div style="background: url(https://source.unsplash.com/collection/572418/free-concert-stock-photos) no-repeat center center; background-size: cover;" class="instrument-card2"></div>
         <% end %>
 
         <div class="card-header">
