--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -59,6 +59,14 @@
     margin: 10px auto;
 }
 
+.instrument-card9 {
+    height: 200px;
+
+   display: block;
+    margin: 10px auto;
+
+}
+
 .instrument-card2 {
     height: 300px;
     width: 100%;
